crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_mixed_integer_width_spec_var.rs
fn rejects_mixed_integer_width_spec_var(x: i32, y: i64) {
    //@ assert "{x} == {y}"
}

fn main() {}
